--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,8 @@ feign:
 server:
   port:
 
-geolocation-db:
-  url: https://geolocation-db.com/json
+location:
+  geolocation-db:
+    url: https://geolocation-db.com/json
+  geo-db-open-api:
+    url: https://wft-geo-db.p.rapidapi.com
