Fixing issues with the application context loading

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "location.geolocation-db.url",
       "type": "java.lang.String",
       "description": "Description for location.geolocation-db.url."
-  }
-] }
+    },
+    {
+      "name": "location",
+      "type": "java.lang.Object",
+      "description": "Description for location."
+    }
+  ] }
