--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,11 +1,17 @@
+spring:
+  profiles: prod
+
 location:
   api:
+    env: prod
     geolocations:
       geolocation-db:
+        name: GeolocationDatabase
         url: https://geolocation-db.com/json
         host: null
         api-key: null
       geolocation-open:
+        name: GeolocationOpenApi
         url: https://wft-geo-db.p.rapidapi.com
         host: wft-geo-db.p.rapidapi.com
         api-key: bb2b00df27msh071e1e385987c1ep1cf96ejsna3bd421d334d
